results/SpecGenBench/2-shot/log-ReverseString-2023_11_06_03_38_53.txt
class ReverseString {
    //@ requires s != null && (\forall int i; 0 <= i && i < s.length; (int)Character.MIN_VALUE <= (int)s[i] && (int)s[i] <= (int)Character.MAX_VALUE);
    //@ assignable s;
    //@ ensures (\forall int i; 0 <= i && i < s.length; s[i] == \old(s[s.length - 1 - i]));
    public void reverseString(char[] s) {
        int n = s.length;
        //@ maintaining 0 <= left && left <= right && right < n;
        //@ maintaining (\forall int i; 0 <= i && i < left; s[i] == \old(s[s.length - 1 - i]));
        //@ maintaining (\forall int i; right + 1 <= i && i < n; s[i] == \old(s[s.length - 1 - i]));
        //@ decreases right - left;
        for (int left = 0, right = n - 1; left < right; ++left, --right) {
            char tmp = s[left];
            s[left] = s[right];
            s[right] = tmp;
        }
        //@ assert (\forall int i; 0 <= i && i < s.length; s[i] == \old(s[s.length - 1 - i]));
    }
}
/home/max/Documents/JMLGPT/tmp/ReverseString.java:3: error: An assignable clause may not contain method formal parameters: s
    //@ assignable s;
                   ^
1 error

